--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,25 +1,40 @@
 <h1>Create your listings here!</h1>
+
+
 <%= form_for @listing do |f| %>
-    <div><%= f.label :title %></div>
-    <div><%= f.text_field :title %></div>
-    <div><%= f.label :kitchen %></div>
-    
-    <!-- radio button for kitchen true false -->
-    <div>true</div>
-    <div><%= f.radio_button :kitchen, true %></div>
-    <div>false</div>
-    <div><%= f.radio_button :kitchen, false %></div>
-    
-    <!-- check_box for amenities options arrays yes no -->
-    <div><%= f.label :amenities %></div>
-    <div>Gym</div>
-    <div><%= f.check_box :amenities, {multiple: true}, "gym", nil %></div>
-    <div>Pool</div>
-    <div><%= f.check_box :amenities, {multiple: true}, "pool", nil %></div>
-    <div>Sauna</div>
-    <div><%= f.check_box :amenities, {multiple: true}, "sauna", nil %></div>
-    <div>Toilets</div>
-    <div><%= f.check_box :amenities, {multiple: true}, "toilets", nil %></div>
+    <div class="form-group">
+        <div><%= f.label :title, class: 'col-sm-2 control-label' %></div>
+        <div><%= f.text_field :title, autofocus: true, class: "col-sm-10 form-control" %></div>
+    </div>
+    <div class="form-group">
+        <!-- radio button for kitchen true false -->
+        <div><%= f.label :kitchen %></div>
+
+        <div class="radio">
+            <div><%= f.radio_button :kitchen, true %> yes</div>
+        </div>
+
+        <div class="radio">
+            <div><%= f.radio_button :kitchen, false %> no</div>
+        </div>
+    </div>
+
+    <div class="form-group">    
+        <!-- check_box for amenities options arrays yes no -->
+        <div><%= f.label :amenities %></div>
+        <div class="checkbox">
+            <div><%= f.check_box :amenities, {multiple: true}, "gym", nil %> Gym</div>
+        </div>
+        <div class="checkbox">
+            <div><%= f.check_box :amenities, {multiple: true}, "pool", nil %> Pool</div>
+        </div>
+        <div class="checkbox">
+            <div><%= f.check_box :amenities, {multiple: true}, "sauna", nil %> Sauna</div>
+        </div>
+        <div class="checkbox">
+            <div><%= f.check_box :amenities, {multiple: true}, "toilets", nil %> Toilets</div>
+        </div>
+    </div>
     <div><%= f.submit "Create Listing" %></div>
 
 <% end %>
