--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,10 @@
       <%= link_to "New Listing", new_listing_path %>
       <%= link_to "See Listings", listings_path%>
 
-      <div id="header">
+      <div id="header-inline" class="navbar navbar-right">
         <% if signed_in? -%>
-          <%= button_to t(".sign_out"), sign_out_path, method: :delete %>
+          <div class="d-inline-block avatar"><%= image_tag current_user.avatar.thumb.url, :class => "avatar" if current_user.avatar? %></div>
+          <div class="d-inline-block"><%= button_to t(".sign_out"), sign_out_path, method: :delete %></div>
         <% else -%>
           <%= link_to t(".sign_in"), sign_in_path %>
         <% end -%>
