--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -6,6 +6,7 @@
         <div><%= f.label :title, class: 'col-sm-2 control-label' %></div>
         <div><%= f.text_field :title, autofocus: true, class: "col-sm-10 form-control" %></div>
     </div>
+
     <div class="form-group">
         <!-- radio button for kitchen true false -->
         <div><%= f.label :kitchen %></div>
@@ -35,6 +36,12 @@
             <div><%= f.check_box :amenities, {multiple: true}, "toilets", nil %> Toilets</div>
         </div>
     </div>
+
+    <div>
+        <%= f.label "Upload photos" %>
+        <%= f.file_field :photos, multiple: true %>
+    </div>
+    
     <div><%= f.submit "Create Listing" %></div>
 
 <% end %>
