production.rb to config for mailer stuff and added sidekiq.yml to limit concurrent workers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default"> 
+    <nav class="navbar navbar-light bg-light"> 
       PAIRBNB
       <%= link_to "New Listing", new_listing_path %>
       <%= link_to "See Listings", listings_path%>
