--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -11,12 +11,16 @@
         <div><%= f.date_field :end_date, autofocus: true, class: "col-sm-2 form-control haha" %></div>
     </div>
 
-    <div class="form-group">
-            <div><%= f.label :price, class: 'col-sm-2 control-label' %></div>
-            <div><%= f.number_field :listing_price, autofocus: true, class: "col-sm-2 form-control", :step => 0.01 %></div>
-        </div>
+<!--    <div class="form-group">
+        <div><%= f.label :price, class: 'col-sm-2 control-label' %></div>
+        <div><%= f.number_field :listing_price, autofocus: true, class: "col-sm-2 form-control", :step => 0.01 %></div>
+    </div> -->
 
+    <div><%= "Price: #{@listing.price} "%></div>
+    
     <div><%= f.submit "Submit Reservation" %></div>
+
+    
 
 <% end %>
 
