--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -6,6 +6,12 @@
         <div><%= f.label :title, class: 'col-sm-2 control-label' %></div>
         <div><%= f.text_field :title, autofocus: true, class: "col-sm-10 form-control" %></div>
     </div>
+
+     <div class="form-group">
+        <div><%= f.label :city, class: 'col-sm-2 control-label' %></div>
+        <div><%= f.text_field :city, autofocus: true, class: "col-sm-10 form-control" %></div>
+    </div>   
+
     <div class="form-group">
         <!-- radio button for kitchen true false -->
         <div><%= f.label :kitchen %></div>
@@ -35,6 +41,10 @@
             <div><%= f.check_box :amenities, {multiple: true}, "toilets", nil %> Toilets</div>
         </div>
     </div>
+         <div class="form-group">
+        <div><%= f.label :price, class: 'col-sm-2 control-label' %></div>
+        <div><%= f.number_field :price, autofocus: true, class: "col-sm-10 form-control", :step => 0.01 %></div>
+    </div> 
     <div><%= f.submit "Submit changes" %></div>
 
 <% end %>
