--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -2,10 +2,11 @@
 
 <div class="container-fluid">
 
+<%# remember to replicate any changes in search.html.erb %>
 
  <%= form_tag search_path, :method => 'get' do%>
     <p>
-        <%= text_field_tag :search, params[:search] %>
+        <%= text_field_tag :title, params[:title] %>
         <%= submit_tag "Search", :title => nil %>
     </p>
 <% end %>
@@ -16,8 +17,10 @@
             <div class="row">
                 <div class="col-md-4">
                     <div><%= "#{l1.title}" %></div>
+                    <div><%= "city: #{l1.city}" %></div>
                     <div><%= "kitchen: #{l1.kitchen}" %></div>
                     <div><%= "amenities: #{l1.amenities}"%></div>
+                    <div><%= "price: #{l1.price}"%></div>
                     <div>
                         <% l1.photos.each do |p| %>
                         <%= image_tag(p.thumb.url) %>
@@ -25,7 +28,7 @@
                     </div>
                     <div><%= l1.user.email %></div>
                     <% if current_user && current_user.id==l1.user_id %>
-                        <div><%= link_to "edit listing", edit_listing_path(l1) %></div>
+                        <div><%= button_to "edit listing", edit_listing_path(l1), method: :get  %></div>
                     <% end %>
 
                     <% if current_user && current_user.customer? %>
@@ -34,7 +37,7 @@
                     <% end %>
 
                     <% unless current_user.nil? %>
-                        <%= link_to "Reserve", new_listing_reservation_path(l1) %>
+                        <%= button_to "Reserve", new_listing_reservation_path(l1), method: :get %>
                     <% end %>
 
                     <div></br></div>
@@ -43,8 +46,10 @@
                 <% if l2 %>                
                     <div class="col-md-4">
                         <div><%= "#{l2.title}" %></div>
+                        <div><%= "city: #{l2.city}" %></div>                        
                         <div><%= "kitchen: #{l2.kitchen}" %></div>
                         <div><%= "amenities: #{l2.amenities}"%></div>
+                        <div><%= "price: #{l2.price}"%></div>
                         <div>
                             <% l2.photos.each do |p| %>
                             <%= image_tag(p.thumb.url) %>
@@ -52,7 +57,7 @@
                         </div>
                         <div><%= l2.user.email %></div>
                         <% if current_user && current_user.id==l2.user_id %>
-                            <div><%= link_to "edit listing", edit_listing_path(l2) %></div>
+                            <div><%= button_to "edit listing", edit_listing_path(l2), method: :get  %></div>
                         <% end %>
 
                         <% if current_user && current_user.customer? %>
@@ -61,7 +66,7 @@
                         <% end %>
 
                         <% unless current_user.nil? %>
-                            <%= link_to "Reserve", new_listing_reservation_path(l2) %>
+                            <%= button_to "Reserve", new_listing_reservation_path(l2), method: :get %>
                         <% end %>
 
                         <div></br></div>
@@ -71,8 +76,10 @@
                 <% if l3 %>
                     <div class="col-md-4">
                         <div><%= "#{l3.title}" %></div>
+                        <div><%= "city: #{l3.city}" %></div>                        
                         <div><%= "kitchen: #{l3.kitchen}" %></div>
                         <div><%= "amenities: #{l3.amenities}"%></div>
+                        <div><%= "price: #{l3.price}"%></div>                        
                         <div>
                             <% l3.photos.each do |p| %>
                             <%= image_tag(p.thumb.url) %>
@@ -80,7 +87,7 @@
                         </div>
                         <div><%= l3.user.email %></div>
                         <% if current_user && current_user.id==l3.user_id %>
-                            <div><%= link_to "edit listing", edit_listing_path(l3) %></div>
+                            <div><%= button_to "edit listing", edit_listing_path(l3), method: :get %></div>
                         <% end %>
 
                         <% if current_user && current_user.customer? %>
@@ -89,7 +96,7 @@
                         <% end %>
 
                         <% unless current_user.nil? %>
-                            <%= link_to "Reserve", new_listing_reservation_path(l3) %>
+                            <%= button_to "Reserve", new_listing_reservation_path(l3), method: :get %>
                         <% end %>
 
                         <div></br></div>
