--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -7,6 +7,11 @@
         <div><%= f.text_field :title, autofocus: true, class: "col-sm-10 form-control" %></div>
     </div>
 
+     <div class="form-group">
+        <div><%= f.label :city, class: 'col-sm-2 control-label' %></div>
+        <div><%= f.text_field :city, autofocus: true, class: "col-sm-10 form-control" %></div>
+    </div>   
+
     <div class="form-group">
         <!-- radio button for kitchen true false -->
         <div><%= f.label :kitchen %></div>
@@ -37,10 +42,17 @@
         </div>
     </div>
 
+    </div>
+        <div class="form-group">
+        <div><%= f.label :price, class: 'col-sm-2 control-label' %></div>
+        <div><%= f.number_field :price, autofocus: true, class: "col-sm-10 form-control", :step => 0.01 %></div>
+    </div> 
+
     <div>
         <%= f.label "Upload photos" %>
         <%= f.file_field :photos, multiple: true %>
     </div>
+
     
     <div><%= f.submit "Create Listing" %></div>
 
