--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,11 @@
-I have no idea what is going on. 
+<h1>Home Page</h1>
+
+<h2>Your Profile</h2>
+
+<p>Photo</p>
+
+<p>Name</p>
+
+<h2>Your latest bookings</h2>
+
+<h2>Your upcoming reservations</h2>
