--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,10 @@ nav{
 
   div{
     margin: 0.5vh 1vw 0.5vh 1vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
   }
 
   .left {
@@ -31,6 +35,10 @@ nav{
   .right {
     background: #ed574a;
   }
+}
+
+.range-field{
+  width: 4vw;
 }
 
 .pagination{
