--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,6 +47,7 @@ nav{
   list-style: none;
   width: fit-content;
   background-color: white;
+
   li{
     margin: 3px;
     background-color: lightpink;
@@ -62,6 +63,21 @@ nav{
 .col-md-4{
   width: 30vw;
   border: 1px solid lightgray;
+}
+
+// [data-listing-id]{
+  // position: absolute;
+// }
+
+.gallery-cell{
+  width: 30vw;
+  text-align: center;
+  background: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,1), rgba(0,0,0,1), rgba(0,0,0,1), rgba(0,0,0,1), rgba(0,0,0,0));
+  // img{
+  //   border: 20px solid green;  
+  //   border-image-source: linear-gradient(lightgreen, darkgreen);
+  //   border-image-slice: 20;
+  // }
 }
 
 .hosted-field {
